unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/ETM_Sales_Vehicle_Inventory__c.object-meta.xml
<CustomObject>
    <label>Sales Vehicle Inventory</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Vehicle Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>