unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Accident_History__c.field-meta.xml
<CustomField>
    <fullName>Accident_History__c</fullName>
    <label>Accident History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>