unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Vehicle_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>