unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Blind_Information_System__c.field-meta.xml
<CustomField>
    <fullName>Blind_Information_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blind Information System</label>
    <type>Checkbox</type>
</CustomField>