unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Collision_Warning__c.field-meta.xml
<CustomField>
    <fullName>Collision_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collision Warning</label>
    <type>Checkbox</type>
</CustomField>