unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Consignment__c.field-meta.xml
<CustomField>
    <fullName>Consignment__c</fullName>
    <label>Consignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>