unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Consignment_percent__c.field-meta.xml
<CustomField>
    <fullName>Consignment_percent__c</fullName>
    <label>Consignment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>