unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Cooling_Box__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cooling Box</label>
    <type>Checkbox</type>
</CustomField>