unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Cruise_Control__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Control__c</fullName>
    <label>Cruise Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adaptive</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>