unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Cylinders__c.field-meta.xml
<CustomField>
    <fullName>Cylinders__c</fullName>
    <label>Cylinders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>3 cylinder</fullName>
            </value>
            <value>
                <fullName>4 cylinder</fullName>
            </value>
            <value>
                <fullName>5 cylinder</fullName>
            </value>
            <value>
                <fullName>6 cylinder</fullName>
            </value>
            <value>
                <fullName>8 cylinder</fullName>
            </value>
            <value>
                <fullName>10 cylinder</fullName>
            </value>
            <value>
                <fullName>12 cylinder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>