unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Door__c.field-meta.xml
<CustomField>
    <fullName>Door__c</fullName>
    <label>Door</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soft Auto. Closing</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>