unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Down_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Amount__c</fullName>
    <description>20 % of Retail Price including VAT</description>
    <formula>ETM_Price__c * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Down Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>