unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Drive_Mood__c.field-meta.xml
<CustomField>
    <fullName>Drive_Mood__c</fullName>
    <label>Drive Mood</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Front Wheel (FWD)</fullName>
            </value>
            <value>
                <fullName>Rear Wheel (RWD)</fullName>
            </value>
            <value>
                <fullName>All Wheel (AWD)</fullName>
            </value>
            <value>
                <fullName>4 Wheel (4WD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>