unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/EBD_Electronic_Braking_Distribution__c.field-meta.xml
<CustomField>
    <fullName>EBD_Electronic_Braking_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBD (Electronic Braking Distribution)</label>
    <type>Checkbox</type>
</CustomField>