unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Engine_Size__c.field-meta.xml
<CustomField>
    <fullName>Engine_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engine Size(Litres)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>