unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Extended_warranty__c.field-meta.xml
<CustomField>
    <fullName>ETM_Extended_warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EXT warranty</label>
    <type>Checkbox</type>
</CustomField>