unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Extended_warranty_Expiry__c.field-meta.xml
<CustomField>
    <fullName>ETM_Extended_warranty_Expiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EXT warranty Expiry Date</label>
    <type>Date</type>
</CustomField>