unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Family__c.field-meta.xml
<CustomField>
    <fullName>ETM_Family__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family</label>
    <length>50</length>
    <type>Text</type>
</CustomField>