unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_KM__c.field-meta.xml
<CustomField>
    <fullName>ETM_KM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Milage/KM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>