unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Manager_Price__c.field-meta.xml
<CustomField>
    <fullName>ETM_Manager_Price__c</fullName>
    <label>Manager Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>