unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Model__c.field-meta.xml
<CustomField>
    <fullName>ETM_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>