unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Plate_code__c.field-meta.xml
<CustomField>
    <fullName>ETM_Plate_code__c</fullName>
    <label>Plate Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Transpiration</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Learning</fullName>
            </value>
            <value>
                <fullName>Expert 1</fullName>
            </value>
            <value>
                <fullName>Expert 2</fullName>
            </value>
            <value>
                <fullName>Expert 3</fullName>
            </value>
            <value>
                <fullName>Expert 4</fullName>
            </value>
            <value>
                <fullName>Expert 5</fullName>
            </value>
            <value>
                <fullName>Expert 6</fullName>
            </value>
            <value>
                <fullName>Expert 7</fullName>
            </value>
            <value>
                <fullName>Expert 8</fullName>
            </value>
            <value>
                <fullName>Expert 9</fullName>
            </value>
            <value>
                <fullName>Political Association</fullName>
            </value>
            <value>
                <fullName>International Organization</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Classical</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Export1</fullName>
            </value>
            <value>
                <fullName>Export2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>