unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Plate_No__c.field-meta.xml
<CustomField>
    <fullName>ETM_Plate_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>