unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Plate_Type__c.field-meta.xml
<CustomField>
    <fullName>ETM_Plate_Type__c</fullName>
    <label>Plate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <label>PRIVATE</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>