unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Price__c.field-meta.xml
<CustomField>
    <fullName>ETM_Price__c</fullName>
    <label>Retail Price including VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>