unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Vehicle_Description__c.field-meta.xml
<CustomField>
    <fullName>ETM_Vehicle_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>