unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>ETM_Vehicle_Status__c</fullName>
    <label>Vehicle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advertised</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Contract Cancelled</fullName>
            </value>
            <value>
                <fullName>Inactive-Reconditioning</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
                <default>true</default>
                <label>Inspection</label>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Ready for Photoshoot</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Removed from Platforms</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
                <isActive>false</isActive>
                <label>Sold</label>
            </value>
            <value>
                <fullName>Sold through Auction</fullName>
            </value>
            <value>
                <fullName>Sold through Showroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>