unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/ETM_Warranty_Km__c.field-meta.xml
<CustomField>
    <fullName>ETM_Warranty_Km__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Warranty KM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>