unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/EXT_warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EXT_warranty_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EXT warranty Start Date</label>
    <type>Date</type>
</CustomField>