unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Folding_Exterior_mirror__c.field-meta.xml
<CustomField>
    <fullName>Folding_Exterior_mirror__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Folding Exterior mirror</label>
    <type>Checkbox</type>
</CustomField>