unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <formula>IF( ISPICKVAL( Consignment__c, &#39;Yes&#39;) , Purchase_Price__c * Consignment_percent__c , ETM_Price__c - Total_Landed_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>