unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Horse_Power__c.field-meta.xml
<CustomField>
    <fullName>Horse_Power__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Horse Power</label>
    <length>255</length>
    <type>Text</type>
</CustomField>