unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Key_less_entry__c.field-meta.xml
<CustomField>
    <fullName>Key_less_entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key less entry</label>
    <type>Checkbox</type>
</CustomField>