unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Lain_Departure__c.field-meta.xml
<CustomField>
    <fullName>Lain_Departure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lain Departure</label>
    <type>Checkbox</type>
</CustomField>