unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Last_Service__c.field-meta.xml
<CustomField>
    <fullName>Last_Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Service</label>
    <type>Date</type>
</CustomField>