unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EM-Dubai service</fullName>
            </value>
            <value>
                <fullName>EM-Dubai body shop</fullName>
            </value>
            <value>
                <fullName>EM-Dubai showroom</fullName>
            </value>
            <value>
                <fullName>EM-Sharjah service</fullName>
            </value>
            <value>
                <fullName>EM-Sharjah body shop</fullName>
            </value>
            <value>
                <fullName>EM-Sharjah showroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>