unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Vehicle Inventory</relationshipLabel>
    <relationshipName>Sales_Vehicle_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>