unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Parking_sensors__c.field-meta.xml
<CustomField>
    <fullName>Parking_sensors__c</fullName>
    <label>Parking sensors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rear</fullName>
            </value>
            <value>
                <fullName>Front and rear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>