unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Rear_Gate__c.field-meta.xml
<CustomField>
    <fullName>Rear_Gate__c</fullName>
    <label>Rear Gate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>