unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <label>Seats</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leather</fullName>
            </value>
            <value>
                <fullName>Fabric</fullName>
            </value>
            <value>
                <fullName>Mix (L&amp;F)</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Heated</fullName>
            </value>
            <value>
                <fullName>Ventilation</fullName>
            </value>
            <value>
                <fullName>Massage Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>