unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Sun_Roof__c.field-meta.xml
<CustomField>
    <fullName>Sun_Roof__c</fullName>
    <label>Sun Roof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Panoramic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>