unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Suspension__c.field-meta.xml
<CustomField>
    <fullName>Suspension__c</fullName>
    <label>Suspension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Hydraulic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>