unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Transmutation__c.field-meta.xml
<CustomField>
    <fullName>Transmutation__c</fullName>
    <label>Transmutation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Normal Cultch</fullName>
            </value>
            <value>
                <fullName>Double Cultch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>