unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Vehicle_Brand_Master__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Brand</label>
    <referenceTo>Vehicle_Brand_Master__c</referenceTo>
    <relationshipLabel>Sales Vehicle Inventory</relationshipLabel>
    <relationshipName>Sales_Vehicle_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>