unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Vehicle_Color__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Color__c</fullName>
    <label>Vehicle Color</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>color</valueSetName>
    </valueSet>
</CustomField>