unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/fields/Vehicle_Specs__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Specs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Specs</label>
    <type>Checkbox</type>
</CustomField>