unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/validationRules/Other_Model_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Model_is_Mandatory</fullName>
    <active>true</active>
    <description>Other Model is Mandatory if Vehicle Model is chosen as Other</description>
    <errorConditionFormula>Vehicle_Model_Master__r.Name == &#39;Other&#39; &amp;&amp; ISBLANK(ETM_Model__c )</errorConditionFormula>
    <errorDisplayField>ETM_Model_1__c</errorDisplayField>
    <errorMessage>Other Model name is required, If you choose vehicle model as Other</errorMessage>
</ValidationRule>