unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETM_Vehicle_Status__c</columns>
    <columns>ETM_Vehicle_No__c</columns>
    <columns>ETM_Chassis_No__c</columns>
    <columns>Body_Type__c</columns>
    <columns>Vehicle_color_Type__c</columns>
    <columns>Vehicle_Color__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>