unpackaged/main/default/objects/ETM_Sales_Vehicle_Inventory__c/listViews/Available_Vehicles.listView-meta.xml
<ListView>
    <fullName>Available_Vehicles</fullName>
    <columns>NAME</columns>
    <columns>ETM_Vehicle_Status__c</columns>
    <columns>ETM_Vehicle_No__c</columns>
    <columns>ETM_Chassis_No__c</columns>
    <columns>Body_Type__c</columns>
    <columns>Vehicle_color_Type__c</columns>
    <columns>Vehicle_Color__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ETM_Vehicle_Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Available Vehicles</label>
</ListView>